--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,19 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
 
+    <script src="https://www.gstatic.com/firebasejs/4.8.2/firebase.js"></script>
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyDVTYdkxRPadgrLP27y8rBS0H24Cy3wvbo",
+        authDomain: "fixit-c88a4.firebaseapp.com",
+        databaseURL: "https://fixit-c88a4.firebaseio.com",
+        projectId: "fixit-c88a4",
+        storageBucket: "",
+        messagingSenderId: "363914755085"
+      };
+      firebase.initializeApp(config);
+    </script>
     <!-- Web Manifest File for firebase cloud messaging -->
     <link rel="manifest" href="/manifest.json">
 
